--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-multi-carousel": "^2.6.2",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
