--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.4.0",
+    "react-google-maps": "^9.4.5",
     "react-multi-carousel": "^2.6.2",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
