--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-map-react": "^2.1.9",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-geocode": "^0.2.3",
