--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-currency-format": "^1.0.0",
+    "react-currency-input-field": "^3.4.1",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.4.0",
     "react-google-maps": "^9.4.5",
     "react-multi-carousel": "^2.6.2",
+    "react-number-format": "^4.6.3",
     "react-phone-input-2": "^2.14.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
